results/SVCOMP/specgen/log-boolean2-2024_02_24_15_41_14.txt
import java.util.Random;

public class boolean2 {
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ ensures \result == f(b);
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:9: error: cannot find symbol
    //@ ensures \result == f(b);
                             ^
  symbol:   variable b
  location: class boolean2
/home/max/Documents/JMLGPT/tmp/boolean2.java:10: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
2 errors

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == f(b);
    //@ ensures \result == !b;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: error: cannot find symbol
    //@ ensures \result == f(b);
                             ^
  symbol:   variable b
  location: class boolean2
/home/max/Documents/JMLGPT/tmp/boolean2.java:12: error: cannot find symbol
    //@ ensures \result == !b;
                            ^
  symbol:   variable b
  location: class boolean2
2 errors

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == f(\result);
    //@ ensures \result == !\result;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}
/home/max/Documents/JMLGPT/tmp/boolean2.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/boolean2.java:11:) in method fun
        return result == !b;
        ^
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/boolean2.java:16:
    //@ ensures \result == f(\result);
        ^
2 verification failures

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
    //@ ensures \result == f(\result);  
    //@ ensures \result == !\result;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}

/home/max/Documents/JMLGPT/tmp/boolean2.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/boolean2.java:11:) in method fun
        return result == !b;
        ^
/home/max/Documents/JMLGPT/tmp/boolean2.java:11: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/boolean2.java:16:
    //@ ensures \result == f(\result);  
        ^
2 verification failures

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
 
    //@ ensures \result == !\result;
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}

/home/max/Documents/JMLGPT/tmp/boolean2.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/boolean2.java:12:) in method fun
        return result == !b;
        ^
/home/max/Documents/JMLGPT/tmp/boolean2.java:12: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/boolean2.java:16:
    //@ ensures \result == !\result;
        ^
2 verification failures

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
 
    //@ ensures \result == !\result;  
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}

/home/max/Documents/JMLGPT/tmp/boolean2.java:16: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/boolean2.java:12:) in method fun
        return result == !b;
        ^
/home/max/Documents/JMLGPT/tmp/boolean2.java:12: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/boolean2.java:16:
    //@ ensures \result == !\result;  
        ^
2 verification failures

import java.util.Random;

public class boolean2 {
    //@ requires true;
    //@ ensures \result == !b;
    public static boolean f(boolean b) {
        return !b;
    }

    //@ requires true;
 
 
    public static boolean fun() {
        boolean b = new Random().nextBoolean();
        boolean result = f(b);
        return result == !b;
    }
}


